--- a/app/app.css
+++ b/app/app.css
@@ -4,6 +4,7 @@
 @import "./styles/utilities-text.css";
 @plugin "./styles/border-plugin.js";
 @import "./styles/component.css";
+@import "./styles/utilities-interactive.css";
 
 .root {
   isolation: isolate;
@@ -12,13 +13,18 @@
 @theme {
   --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
+  --canvas: oklch(var(--neutral-200));
+}
+
+.dark {
+  --canvas: oklch(var(--neutral-950));
 }
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
-
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+  background-color: var(--canvas);
+  @media (prefers-color-scheme: light) {
+    color-scheme: light;
   }
 }
