--- a/app/styles/component.css
+++ b/app/styles/component.css
@@ -1,5 +1,5 @@
 @layer component {
-  .button-base {
+  .foundation-button {
     @apply flex items-center justify-center whitespace-nowrap;
     @apply rounded-sm gap-2 text-base font-medium;
   }
