feat: atualiza estilos, componentes e rotas; reorganiza arquivos e adiciona novos utilitários de tipografia e superfície

--- a/app/app.css
+++ b/app/app.css
@@ -1,30 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wdth,wght,YTLC@0,6..12,75..125,200..1000,440..540;1,6..12,75..125,200..1000,440..540&display=swap');
 @import "tailwindcss";
 @import "./styles/primitives.css";
-@import "./styles/utilities-bg.css";
-@import "./styles/utilities-text.css";
-@plugin "./styles/border-plugin.js";
-@import "./styles/component.css";
-@import "./styles/utilities-interactive.css";
+@import "./styles/utilities-surface.css";
+@import "./styles/utilities-typography.css";
 
-.root {
-  isolation: isolate;
-}
+:root{
+  color-scheme: light dark;
 
-@theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-
-  --canvas: oklch(var(--neutral-200));
-}
-
-.dark {
-  --canvas: oklch(var(--neutral-950));
+  --bg-app:
+  light-dark(
+   oklch(var(--neutral-100)),
+   oklch(var(--neutral-950))
+ );
 }
 
 html,
 body {
-  background-color: var(--canvas);
-  @media (prefers-color-scheme: light) {
-    color-scheme: light;
-  }
+  background-color: var(--bg-app);
+}
+
+html.light {
+  color-scheme: light;
+}
+html.dark {
+  color-scheme: dark;
+}
+
+.root {
+  isolation: isolate;
 }
