--- a/app/styles/primitives.css
+++ b/app/styles/primitives.css
@@ -1,10 +1,9 @@
-:root {
+@theme inline {
   --white: 1 0 0;
   --black: 0 0 0;
 
   /* Neutral */
-  --neutral-50: 0.98 0.004 180;
-
+  --neutral-50: 0.97 0.004 180;
   --neutral-100: 0.95 0.005 180;
   --neutral-200: 0.92 0.01 180;
   --neutral-300: 0.86 0.015 180;
@@ -110,4 +109,68 @@
   --transition-fast: 0.12s ease-in-out;
   --transition-medium: 0.2s ease-in-out;
   --transition-slow: 0.3s ease-in-out;
+
+/* Typography */
+
+  --fluid-min-width: 360;
+  --fluid-max-width: 1400;
+  --fluid-screen: 100vw;
+  --type-scale: 1.2;
+  --type-base-size: 16;
+  --fluid-bp: calc(
+    (var(--fluid-screen) - var(--fluid-min-width) / 16 * 1rem) /
+      (var(--fluid-max-width) - var(--fluid-min-width))
+  );
+
+  /* Families */
+  --font-sans: "Nunito Sans", system-ui, -apple-system, sans-serif;
+  --font-monos: "JetBrains Mono Variable", "SF Mono", Consolas, monospace;
+
+  /* Sizes */
+  --font-size-xs: clamp(0.75rem, 0.75rem + var(--fluid-bp) * 0.125, 0.8125rem);
+  --font-size-sm: clamp(
+    0.875rem,
+    0.875rem + var(--fluid-bp) * 0.125,
+    0.9375rem
+  );
+  --font-size-base: clamp(1rem, 1rem + var(--fluid-bp) * 0.125, 1.0625rem);
+  --font-size-lg: clamp(1.125rem, 1.125rem + var(--fluid-bp) * 0.25, 1.25rem);
+  --font-size-xl: clamp(1.25rem, 1.25rem + var(--fluid-bp) * 0.375, 1.4375rem);
+  --font-size-2xl: clamp(1.5rem, 1.5rem + var(--fluid-bp) * 0.5, 1.75rem);
+  --font-size-3xl: clamp(
+    1.875rem,
+    1.875rem + var(--fluid-bp) * 0.625,
+    2.1875rem
+  );
+  --font-size-4xl: clamp(2.25rem, 2.25rem + var(--fluid-bp) * 0.75, 2.625rem);
+  --font-size-5xl: clamp(3rem, 3rem + var(--fluid-bp) * 1, 3.75rem);
+
+  /* Font Weights */
+  --font-weight-light: 300;
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-semibold: 600;
+  --font-weight-bold: 700;
+  --font-weight-extrabold: 800;
+
+  /* Line Height */
+  --line-height-none: 1;
+  --line-height-tight: 1.25;
+  --line-height-snug: 1.375;
+  --line-height-normal: 1.5;
+  --line-height-relaxed: 1.625;
+  --line-height-loose: 2;
+
+  /* Letter Spacing */
+  --letter-spacing-tighter: -0.05em;
+  --letter-spacing-tight: -0.025em;
+  --letter-spacing-normal: 0em;
+  --letter-spacing-wide: 0.025em;
+  --letter-spacing-wider: 0.05em;
+  --letter-spacing-widest: 0.1em;
+
+  /* Font width */
+  --font-width-condensed: 75;
+  --font-width-normal: 100;
+  --font-width-expanded: 125;
 }
