--- a/app/styles/component.css
+++ b/app/styles/component.css
@@ -1,6 +1,5 @@
 @layer component {
   .foundation-button {
-    @apply flex items-center justify-center whitespace-nowrap select-none;
-    @apply gap-2 font-semibold tracking-wide;
+    @apply flex items-center justify-center gap-2 whitespace-nowrap select-none;
   }
 }
